homepage.css
*{
    margin-left: 5px;
    margin-right: 5px;
}
.title{
    font-size: 40px;
}
.msg{
    font-size: 20px;
}
/* Overview content */
.overview{
    display: grid;
    grid-template-columns: 1fr, 1fr;
    grid-gap: 1em;
    grid-auto-rows: minmax(100px, auto);
}
.overview-content{
    grid-row: 1;
    grid-column: 1/2;
}
.overview-vid{
    grid-row: 1/2;
    grid-column: 3;
}
.points{
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    padding-top: 1em;
}
.point-one{
    width: 40%;

}
.point-two{
    width: 40%;

}
img{
    width: 50%;
}

